feature: переработать и актуализировать тесты